--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <h1>Welcome to</h1>
     <h1 > <span class="orange-color">Sajid Alam</span> World</h1>
     <h3>Build Climber and Train Stoper</h3>
+    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+    <img src="images/jhankar.png" alt="">
 </body>
 </html>
