--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <section>
-        <div>
+        <div class="half-width">
             <h1>Welcome to</h1>
             <h1> <span class="orange-color">Sajid Alam</span> World</h1>
             <h3>Build Climber and Train Stoper</h3>
@@ -23,8 +23,9 @@
                 That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development
                 Hero.</p>
+            <a class="link-button" target="blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
         </div>
-        <div>
+        <div class="half-width">
             <img src="images/jhankar.png" alt="">
 
         </div>
